@@ -63,12 +63,6 @@ typedef struct MetaWindowPropHooks
   ReloadValueFunc   reload_func;
 } MetaWindowPropHooks;
 
-static void init_prop_value            (MetaDisplay   *display,
-                                        Atom           property,
-                                        MetaPropValue *value);
-static void reload_prop_value          (MetaWindow    *window,
-                                        MetaPropValue *value,
-                                        gboolean       initial);
 static MetaWindowPropHooks* find_hooks (MetaDisplay *display,
                                         Atom         property);
 
@@ -118,59 +112,39 @@ meta_window_reload_properties_from_xwindow (MetaWindow *window,
   g_return_if_fail (n_properties > 0);
   
   values = g_new0 (MetaPropValue, n_properties);
-  
-  i = 0;
-  while (i < n_properties)
+
+  for (i=0; i<n_properties; i++)
     {
-      init_prop_value (window->display, properties[i], &values[i]);
-      ++i;
+      MetaWindowPropHooks *hooks = find_hooks (window->display,
+                                               properties[i]);
+    
+      if (!hooks || hooks->type == META_PROP_VALUE_INVALID)
+        {
+          values[i].type = META_PROP_VALUE_INVALID;
+          values[i].atom = None;
+        }
+      else
+        {
+          values[i].type = hooks->type;
+          values[i].atom = properties[i];
+        }
     }
   
   meta_prop_get_values (window->display, xwindow,
                         values, n_properties);
 
-  i = 0;
-  while (i < n_properties)
+  for (i=0; i<n_properties; i++)
     {
-      reload_prop_value (window, &values[i], initial);
-      
-      ++i;
+      MetaWindowPropHooks *hooks = find_hooks (window->display,
+                                               properties[i]);
+
+      if (hooks && hooks->reload_func != NULL)
+        (* hooks->reload_func) (window, &values[i], initial);
     }
 
   meta_prop_free_values (values, n_properties);
   
   g_free (values);
-}
-
-/* Fill in the MetaPropValue used to get the value of "property" */
-static void
-init_prop_value (MetaDisplay   *display,
-                 Atom           property,
-                 MetaPropValue *value)
-{
-  MetaWindowPropHooks *hooks = find_hooks (display, property);
-    
-  if (!hooks || hooks->type == META_PROP_VALUE_INVALID)
-    {
-      value->type = META_PROP_VALUE_INVALID;
-      value->atom = None;
-    }
-  else
-    {
-      value->type = hooks->type;
-      value->atom = property;
-    }
-}
-
-static void
-reload_prop_value (MetaWindow    *window,
-                   MetaPropValue *value,
-                   gboolean       initial)
-{
-  MetaWindowPropHooks *hooks = find_hooks (window->display, value->atom);
-
-  if (hooks && hooks->reload_func != NULL)
-    (* hooks->reload_func) (window, value, initial);
 }
 
 static void
@@ -1469,6 +1443,9 @@ meta_display_free_window_prop_hooks (MetaDisplay *display)
   display->prop_hooks_table = NULL;
 }
 
+/**
+ * Finds the hooks for a particular property.
+ */
 static MetaWindowPropHooks*
 find_hooks (MetaDisplay *display,
             Atom         property)
